Add NSR codespace (#87)